syntax = "proto3";

package boring.types;

message Post {
  int64 user_id = 1;
  int64 id = 2;
  string title = 3;
  string body = 4;
}

message Comment {
  int64 post_id = 1;
  int64 id = 2;
  string name = 3;
  string email = 4;
  string body = 5;
}

message PostsResponse { repeated Post posts = 1; }

message CommentsResponse { repeated Comment comments = 1; }